# Computer-Graphic-Homework

./: README.md
homework 1/: Makefile  a.out  button.hpp  main  main.cpp  menubar.hpp
homework 1/latex-homework-class-master/: template.tex
homework 1/paint/: Line.hpp  Point.hpp  Polygon.hpp  Rectangle.hpp
hua/: Makefile  robot.cpp
hw1/: Makefile  build.cmd  button.hpp  gridline.hpp  main  main.cpp  preview_color.hpp
hw1/latex-homework-class-master/: template.tex
hw1/lu/: Makefile  main.c
hw1/paint/: Rectangle.hpp  Text.hpp
hw1/上船作業/source/: CMakeLists.txt
hw1/上船作業/source/paint/: Circle.hpp  Point.hpp
hw2/: Makefile  a.out  main.cpp
hw2/!!example/: Makefile  car  car.c  cubes  cubes.c  template  wind_mill  wind_mill.cpp
hw2/Gundam/: calf.hpp  foot.hpp  hand.hpp  head.hpp  thigh.hpp  torso.hpp
hw2/debug/: debug.hpp
hw2/environment/: init.hpp  items.hpp  obstacles.hpp  stone.hpp
hw2/item/: lollipop.hpp  sword.hpp
hw2/latex-homework-class-master/: template.tex
hw2/robot/: arm.hpp  hand.hpp  head.hpp  leg.hpp  robot.hpp  torso.hpp
hw3/: Makefile  compute.cpp
hw3/03_Projection/: project  view  view1.c
hw3/Gundam/: thigh.hpp
hw3/debug/: debug.hpp
hw3/environment/: obstacles.hpp
hw3/latex-homework-class-master/: template.tex
hw3/robot/: arm.hpp  hand.hpp  robot.hpp
hw3/上傳作業/: main.cpp
hw4/: main.cpp
hw4 copy/: a.out  main.cpp  test
hw4 copy/04_Shade/: Makefile  light.c
hw4 copy/Gundam/: allmaterial.hpp  calf.hpp  foot.hpp  hand.hpp  head.hpp  lower_arm.hpp  thigh.hpp  torso.hpp  (+1 more)
hw5/: compute.cpp  main.cpp  output
(+83 files in other folders)
